removendo dos links dos sites

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!--
   /**
     *
-    * @copyright 2019 by Tatieli Ramos
-    * http://www.tatielirb.com
+    * @copyright 2023 by Tatieli Ramos
+    * 
     *
     **/
   -->
@@ -108,7 +108,7 @@
               </div>
             </div>  
 
-            <a href="http://www.w3haus.com.br/now3/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/now-w3haus.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -120,7 +120,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/sansung-nextinnovation.jpg)">
@@ -136,7 +136,7 @@
               </div>
             </div>  
 
-            <a href="http://www.tintasrenner-deco.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/tintas-renner.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -148,7 +148,7 @@
                     <div class="alt-line"></div>   
                   </div>      
               </div>
-            </a> 
+            </div> 
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/sansung-galaxy-a.jpg)">
@@ -222,7 +222,7 @@
               </div>
             </a>     
 
-            <a href="http://anittaoficial.com/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/anittaagenda.jpg)">
                 <span class="hover"></span>  
                 <div class="valign">
@@ -250,7 +250,7 @@
               </div>
             </a>  
 
-            <a href="http://www.favoritaplanejados.com.br/" target="_blank" class="customers">
+            <div href="http://www.favoritaplanejados.com.br/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/favorita_planejado_2015.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -262,7 +262,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/inovacao_2015_fiergs.jpg)">
@@ -292,7 +292,7 @@
               </div>
             </div>    
 
-            <a href="http://www.colcci.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/colcci_inverno2015.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -304,9 +304,9 @@
                     <div class="alt-line"></div>   
                   </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.colcci.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/colcci_spfw_2015.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -334,7 +334,7 @@
               </div>
             </a>  
 
-            <a href="http://www.colcci.com.br/blog/power-skinny-jeans/" target="_blank" class="customers">
+            <div href="http://www.colcci.com.br/blog/power-skinny-jeans/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/power-skinnyjeans-edition.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -346,9 +346,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://ariaht.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/ariaht.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -360,9 +360,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.danielcassin.com.uy/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/danielCassin_natalmaisbonito2015.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -374,7 +374,7 @@
                   <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <a href="http://www.dellanno.com.br/best/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/dellanno_best_2015.jpg)">
@@ -418,7 +418,7 @@
               </div>
             </div>  
 
-            <a href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/dona_walk_run_paquetaesportes_2014.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -432,7 +432,7 @@
               </div>
             </a>  
 
-            <a href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
+            <div href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/walkrun_paquetaesportes_2014.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -444,7 +444,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/queroVerGol_paquetaesporte.jpg)">
@@ -460,7 +460,7 @@
               </div>  
             </div>
 
-            <a href="http://favoritaplanejados.com.br/meunatalfavorito" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/natalfavorita.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -472,7 +472,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/sommer_sabrinasato.jpg)">
@@ -488,7 +488,7 @@
               </div>
             </div>  
 
-            <a href="http://www.newmoveis.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/new_moveis_sorte.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -500,9 +500,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://tartoni.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/tartoni.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -514,7 +514,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <a href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/garmin_paquetaesportes.jpg)">
@@ -558,7 +558,7 @@
               </div>
             </a>    
 
-            <a href="https://www.educarintercambios.com/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/educarIntercampios.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -570,9 +570,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.glaucciodutra.com/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/glaucciodutra.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
