ajustando chamda de div e remoção de paoctes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               </div>
             </div>  
 
-            <a href="http://www.senar-rs.com.br/expointer/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/senar.jpg)">
                 <span class="hover"></span>  
                 <div class="valign">
@@ -190,7 +190,7 @@
                   <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>    
+            </div>    
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/hackathon-petrobras.jpg)">
@@ -208,7 +208,7 @@
           </div>
 
           <div class="page2">
-            <a href="http://www.majesticvernizes.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/tintas-renner-majestic.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -220,7 +220,7 @@
                     <div class="alt-line"></div>   
                   </div>      
               </div>
-            </a>     
+            </div>     
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/anittaagenda.jpg)">
@@ -234,9 +234,9 @@
                   <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.musickeria.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/musekeria.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -248,7 +248,7 @@
                     <div class="alt-line"></div>   
                   </div>      
               </div>
-            </a>  
+            </div>  
 
             <div href="http://www.favoritaplanejados.com.br/" target="_blank" class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/favorita_planejado_2015.jpg)">
@@ -318,9 +318,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.elevato.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/elevato.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -332,9 +332,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <div href="http://www.colcci.com.br/blog/power-skinny-jeans/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/power-skinnyjeans-edition.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -376,7 +376,7 @@
               </div>
             </div>  
 
-            <a href="http://www.dellanno.com.br/best/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/dellanno_best_2015.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -388,9 +388,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <a href="http://www.mudamundo.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/mudamundo.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -402,7 +402,7 @@
                     <div class="alt-line"></div>   
                   </div>      
               </div>
-            </a>    
+            </div>    
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/pequenosValentes_HMD.jpg)">
@@ -430,9 +430,9 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
-            <div href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/walkrun_paquetaesportes_2014.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -516,7 +516,7 @@
               </div>
             </div>  
 
-            <a href="http://www.paquetaesportes.com.br/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/garmin_paquetaesportes.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -528,7 +528,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/sommer2015.jpg)">
@@ -544,7 +544,7 @@
               </div>
             </div>  
 
-            <a href="http://www.favoritaplanejados.com.br/minhafavorita/" target="_blank" class="customers">
+            <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/minha-favorita.jpg)">
                 <span class="hover"></span>  
                   <div class="valign">
@@ -556,7 +556,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>    
+            </div>    
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/educarIntercampios.jpg)">
@@ -584,7 +584,7 @@
                     <div class="alt-line"></div>   
                 </div>      
               </div>
-            </a>  
+            </div>  
           </div>                
         </div>
 
