teste de fechamento de div

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>                    
           </div>
 
-          <div class="page2">
+          <!-- <div class="page2"> -->
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/tintas-renner-majestic.jpg)">
                 <span class="hover"></span>  
@@ -585,7 +585,7 @@
                 </div>      
               </div>
             </div>  
-          </div>                
+          <!-- </div>                 -->
         </div>
 
         <div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 justify-content-md-center box-button">
