--- a/index.html
+++ b/index.html
@@ -204,10 +204,11 @@
                   <div class="alt-line"></div>   
                 </div>      
               </div>
-            </div>                    
+            </div>      
+
           </div>
 
-          <!-- <div class="page2"> -->
+          <div class="page2">
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/tintas-renner-majestic.jpg)">
                 <span class="hover"></span>  
@@ -585,7 +586,7 @@
                 </div>      
               </div>
             </div>  
-          <!-- </div>                 -->
+          
         </div>
 
         <div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 justify-content-md-center box-button">
