teste de fechamento de div

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>      
               </div>
             </div>      
-
+                          
           </div>
 
           <div class="page2">
@@ -586,7 +586,7 @@
                 </div>      
               </div>
             </div>  
-          
+          </div>                
         </div>
 
         <div class="row col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 justify-content-md-center box-button">
