feat: ajuste de quebra na pagina

--- a/index.html
+++ b/index.html
@@ -711,6 +711,14 @@
                   <span class="percent">Basic</span>
                 </div>
               </div>
+
+              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 skill">
+                <div class="bar">
+                  <div class="tag">English</div>
+                  <div class="fill seven"></div>
+                  <span class="percent">Intermediate</span>
+                </div>
+              </div>
   
             </div>
 
@@ -734,7 +742,7 @@
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 skill">
                 <div class="bar">
                   <div class="tag">Git(GitHub)</div>
-                  <div class="fill eight></div>
+                  <div class="fill eight"></div>
                   <span class="percent">Advanced</span>
                 </div>
               </div>
@@ -757,7 +765,7 @@
 
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 skill">
                 <div class="bar">
-                  <div class="tag">Systems Design</div>
+                  <div class="tag">DS</div>
                   <div class="fill seven"></div>
                   <span class="percent">Intermediate</span>
                 </div>
@@ -771,13 +779,7 @@
                 </div>
               </div>
 
-              <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 skill">
-                <div class="bar">
-                  <div class="tag">English</div>
-                  <div class="fill seven"></div>
-                  <span class="percent">Intermediate</span>
-                </div>
-              </div>
+              
 
               <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 skill">
                 <div class="bar">
