feat: removed icon de beer

--- a/index.html
+++ b/index.html
@@ -994,7 +994,7 @@
     </main>
 
     <footer>
-      <p>© made with lots of <span class="fas fa-coffee"></span> and <span class="fas fa-beer"></span></p>
+      <p>© made with lots of <span class="fas fa-coffee"></span> </p>
       <a href="#" class="to-top"><p>Voltar ao topo</p><span class="fas fa-arrow-up"></span></a>
     </footer>
   </div>  
