feat: ajuste nos titulos e remocao de bloco

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 <a class="nav-link" href="#" data-link="about">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-link="skills-services">Skills and Services</a>
+                <a class="nav-link" href="#" data-link="skills-services">Skills</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" data-link="experiences">Experiences</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" data-link="education-history">Education History</a>
+                <a class="nav-link" href="#" data-link="education-history">Education</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" data-link="contact">Contact</a>
@@ -619,36 +619,8 @@
       <section id="skills-services">
           
         <div class="box-title box-gray col-12">
-          <h2> < Skills and Services ></h2>
+          <h2> < Skills ></h2>
           <span class="line"></span>
-        </div>
-
-        <div class="container box-services-content">
-          <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
-              <div class="box-services"><span class="fas fa-code"></span></div>
-              <h3>WebSites</h3>
-              <p>Production of responsive websites, from landing pages to dynamic websites. Websites don't have to be static, I love making pages come to life.</p>
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
-              <div class="box-services"><span class="fas fa-mobile-alt"></span></div>
-              <h3>Responsive</h3>
-              <p>My layouts will work on any device, big or small.</p>
-              </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
-              <div class="box-services"><span class="fab fa-grav"></span></div>
-              <h3>Intuitive</h3>
-              <p>Strong preference for easy to use, intuitive UX/UI.</p>
-            </div>
-
-            <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3 services">
-              <div class="box-services"><span class="fas fa-universal-access"></span></div>
-              <h3>Accessibility</h3>
-              <p>The concern with accessible websites is standing out among the big brands. An accessible site is important for inclusion and brand value. I want to help more and more people with my UX knowledge.</p>
-            </div>                  
-          </div>
         </div>
 
         <div class="container">
@@ -892,7 +864,7 @@
 
       <section id="education-history">
         <div class="box-title box-gray col-12">
-          <h2> < Education History ></h2>
+          <h2> < Education ></h2>
           <span class="line"></span>
         </div>
 
@@ -974,7 +946,7 @@
 
       <section id="contact">
         <div class="box-title box-gray col-12">
-          <h2> < Get in touch ></h2>
+          <h2> < Contacts ></h2>
           <span class="line"></span>
           <p>Have a question or want to work together?</p>
         </div>
