feat: add new projects

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!--
   /**
     *
-    * @copyright 2023 by Tatieli Ramos
+    * @copyright 2024 by Tatieli Ramos
     * 
     *
     **/
@@ -87,12 +87,54 @@
         <div class="box-title box-gray col-12">
           <h2> < Portfolio ></h2>
           <span class="line"></span>
-          <p>Take a look at what I have done.</p>
+          <p>Projects developed for companies</p>
         </div>
 
         <div class="box-customers">
 
           <div class="page1">
+
+            <div class="customers">
+              <div class="bg-portfolio" style="background-image: url(img/customers/atlas-warren.png)">
+                <span class="hover"></span>  
+                <div class="valign">
+                  <div class="center row justify-content-center no-gutters">
+                    <h3>Atlas</h3>
+                    <h4>Sistema Interno </h4>
+                    <p>A serviço da Warren</p>
+                  </div>
+                  <div class="alt-line"></div>   
+                </div>      
+              </div>
+            </div>  
+
+            <div class="customers">
+              <div class="bg-portfolio" style="background-image: url(img/customers/warren.png)">
+                <span class="hover"></span>  
+                <div class="valign">
+                  <div class="center row justify-content-center no-gutters">
+                    <h3>Warren</h3>
+                    <h4>Site Warren</h4>
+                    <p>A serviço da Warren</p>
+                  </div>
+                  <div class="alt-line"></div>   
+                </div>      
+              </div>
+            </div>  
+
+            <div class="customers">
+              <div class="bg-portfolio" style="background-image: url(img/customers/warren-login.png)">
+                <span class="hover"></span>  
+                <div class="valign">
+                  <div class="center row justify-content-center no-gutters">
+                    <h3>Warren</h3>
+                    <h4>Paltaforma cliente Warren</h4>
+                    <p>A serviço da Warren</p>
+                  </div>
+                  <div class="alt-line"></div>   
+                </div>      
+              </div>
+            </div>  
 
             <div class="customers">
               <div class="bg-portfolio" style="background-image: url(img/customers/seguindo-em-frente-petrobras.jpg)">
