feat: ajutes de css

--- a/index.html
+++ b/index.html
@@ -1210,7 +1210,8 @@
 
         <section id="contact">
           <div class="bg-filter">
-            <div class="box-title box-gray col-12">
+
+            <div class="box-title box-white col-12">
               <h2>< Contacts ></h2>
               <span class="line"></span>
               <p>Have a question or want to work together?</p>
