feat: ajuste de menu e css

--- a/index.html
+++ b/index.html
@@ -97,16 +97,6 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#" data-link="experiences"
-                    >Experiences</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" data-link="education-history"
-                    >Education</a
-                  >
-                </li>
-                <li class="nav-item">
                   <a class="nav-link" href="#" data-link="contact">Contact</a>
                 </li>
               </ul>
@@ -1210,49 +1200,52 @@
 
         <section id="contact">
           <div class="bg-filter">
+            <div class="container-contact">
+              <div class="box-title box-white col-12">
+                <h2>< Contacts ></h2>
+                <span class="line"></span>
+                <p>Have a question or want to work together?</p>
+              </div>
 
-            <div class="box-title box-white col-12">
-              <h2>< Contacts ></h2>
-              <span class="line"></span>
-              <p>Have a question or want to work together?</p>
-            </div>
-
-            <div class="container">
-              <div class="row">
-                <ul>
-                  <li>
-                    <a
-                      href="https://www.linkedin.com/in/tatielirb/"
-                      target="_blank"
-                      ><p>Linkefin</p>
-                      <span class="fab fa-linkedin-in"></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="https://twitter.com/tatielirb" target="_blank"
-                      ><p>Twitter</p>
-                      <span class="fab fa-twitter"></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="https://www.behance.net/tatielirb" target="_blank"
-                      ><p>Behance</p>
-                      <span class="fab fa-behance"></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="https://github.com/tatielirb" target="_blank"
-                      ><p>Github</p>
-                      <span class="fab fa-github-alt"></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a href="https://medium.com/@tatielirb" target="_blank"
-                      ><p>Medium</p>
-                      <span class="fab fa-medium-m"></span
-                    ></a>
-                  </li>
-                </ul>
+              <div class="container">
+                <div class="row">
+                  <ul>
+                    <li>
+                      <a
+                        href="https://www.linkedin.com/in/tatielirb/"
+                        target="_blank"
+                        ><p>Linkefin</p>
+                        <span class="fab fa-linkedin-in"></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="https://twitter.com/tatielirb" target="_blank"
+                        ><p>Twitter</p>
+                        <span class="fab fa-twitter"></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://www.behance.net/tatielirb"
+                        target="_blank"
+                        ><p>Behance</p>
+                        <span class="fab fa-behance"></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/tatielirb" target="_blank"
+                        ><p>Github</p>
+                        <span class="fab fa-github-alt"></span
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="https://medium.com/@tatielirb" target="_blank"
+                        ><p>Medium</p>
+                        <span class="fab fa-medium-m"></span
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
