--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <meta
       name="description"
       content="Graduated in Systems for Internet by the institution of Technology Alcides Maya with  graduation in User Experiencie by the institution UniRitter."
@@ -146,7 +147,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Atlas</h3>
                       <h4>Sistema Interno</h4>
-                      <p>A serviço da Warren</p>
+                      <p>In service to Warren</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -163,7 +164,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Warren</h3>
                       <h4>Site Warren</h4>
-                      <p>A serviço da Warren</p>
+                      <p>In service to Warren</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -180,7 +181,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Warren</h3>
                       <h4>Paltaforma cliente Warren</h4>
-                      <p>A serviço da Warren</p>
+                      <p>In service to Warren</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -199,7 +200,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Petrobras</h3>
                       <h4>Seguindo em Frente 2017</h4>
-                      <p>A serviço da HUIA e H3Haus</p>
+                      <p>In service to HUIA e H3Haus</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -216,7 +217,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>NOW3</h3>
                       <h4>Site do Curso</h4>
-                      <p>A serviço da HUIA e H3Haus</p>
+                      <p>In service to HUIA and H3Haus</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -235,7 +236,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Sansung</h3>
                       <h4>Next Innovation</h4>
-                      <p>A serviço da HUIA e H3Haus</p>
+                      <p>In service to HUIA and H3Haus</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -252,7 +253,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Tintas Renner</h3>
                       <h4>Site Deco</h4>
-                      <p>A serviço da HUIA</p>
+                      <p>In service to HUIA</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -271,7 +272,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Sansung</h3>
                       <h4>Galaxy A 2017</h4>
-                      <p>A serviço da HUIA e H3Haus</p>
+                      <p>In service to HUIA and H3Haus</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -290,7 +291,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Cartórios de Protesto RS</h3>
                       <h4>Site 2017</h4>
-                      <p>A serviço da HUIA</p>
+                      <p>In service to HUIA</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -307,7 +308,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>SENAR</h3>
                       <h4>Expointer 2016</h4>
-                      <p>A serviço da HUIA</p>
+                      <p>In service to HUIA</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -326,7 +327,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Petrobras</h3>
                       <h4>Hackathon Petrobras 1° Ed</h4>
-                      <p>A serviço da HUIA e H3Haus</p>
+                      <p>In service to HUIA and H3Haus</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -344,7 +345,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>Tintas Renner</h3>
                       <h4>Site Majestic</h4>
-                      <p>A serviço da HUIA</p>
+                      <p>In service to HUIA</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -363,7 +364,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>ANITTA</h3>
                       <h4>Agenda temporaria</h4>
-                      <p>A serviço da Base Digital</p>
+                      <p>In service to Base Digital</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -380,7 +381,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>MUSIKERIA</h3>
                       <h4>Site 2016</h4>
-                      <p>A serviço da Base Digital</p>
+                      <p>In service to Base Digital</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -403,7 +404,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>FAVORITA</h3>
                       <h4>Site 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -422,7 +423,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>INOVAÇÃO FIERS</h3>
                       <h4>2º Forúm de Inovação</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -441,7 +442,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>TECNOPUC</h3>
                       <h4>Livro de 10 anos digital</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -460,7 +461,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>COLCCI</h3>
                       <h4>Coleção Inverno 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -479,7 +480,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>COLCCI SPFW</h3>
                       <h4>Cobertura SPFW da colcci</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -496,7 +497,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>ELEVATO</h3>
                       <h4>Montelupo</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -515,7 +516,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>COLCCI</h3>
                       <h4>Site Power Skinny Jeans</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -532,7 +533,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>ARIA HT</h3>
                       <h4>Site 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -551,7 +552,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>DANIEL CASSIN</h3>
                       <h4>Natal mais Bonito 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -570,7 +571,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>DELL ANNO BEST</h3>
                       <h4>Campanha 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -587,7 +588,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>MUDA MUNDO</h3>
                       <h4>Site 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -606,7 +607,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>PEQUENOS VALENTES</h3>
                       <h4>Projeto HMD</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -625,7 +626,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>DONNA WALK RUN</h3>
                       <h4>Paqueta Esportes 2014</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -644,7 +645,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>WALK RUN</h3>
                       <h4>Paqueta Esportes 2014</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -663,7 +664,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>#QUEROVERGOL</h3>
                       <h4>Paqueta Esportes campanha copa 2014</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -680,7 +681,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>MEU NATAL FAVORITO</h3>
                       <h4>Campanha de Natal</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -699,7 +700,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>SOMMER</h3>
                       <h4>Campanha coleção 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -718,7 +719,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>NEW MÓVEIS</h3>
                       <h4>Sorte sua</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -735,7 +736,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>TARTONI</h3>
                       <h4>Site de Promoção 2015</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -754,7 +755,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>GARMIN</h3>
                       <h4>Site 2014</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -771,7 +772,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>SOMMER</h3>
                       <h4>Campanha Verão 2016</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -790,7 +791,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>MINHA FAVORITA</h3>
                       <h4>Site de decoração</h4>
-                      <p>A serviço da Aldeia</p>
+                      <p>In service to Aldeia</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -809,7 +810,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>EDUCAR</h3>
                       <h4>Site da escola</h4>
-                      <p>A serviço da POP3</p>
+                      <p>In service to POP3</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -826,7 +827,7 @@
                     <div class="center row justify-content-center no-gutters">
                       <h3>GLAUCCIO DUTRA</h3>
                       <h4>Portfólio</h4>
-                      <p>A serviço da POP3</p>
+                      <p>In service to POP3</p>
                     </div>
                     <div class="alt-line"></div>
                   </div>
@@ -1034,6 +1035,14 @@
                 <div class="row">
                   <ul>
                     <li>
+                      <i class="bi bi-linkedin"></i>
+                      <a
+                        href="https://www.linkedin.com/in/tatielirb/"
+                        target="_blank"
+                        ><p>Linkefin</p>
+                        <i class="bi bi-linkedin"></i></a>
+                    </li>
+                    <li>
                       <a
                         href="https://www.linkedin.com/in/tatielirb/"
                         target="_blank"
@@ -1100,22 +1109,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="/js/script.js"></script>
-
-    <script>
-      (function (a, b, c, d, e, f) {
-        a.GoogleAnalyticsObject = d;
-        a[d] ||
-          (a[d] = function () {
-            (a[d].q = a[d].q || []).push(arguments);
-          });
-        a[d].l = +new Date();
-        e = b.createElement(c);
-        f = b.getElementsByTagName(c)[0];
-        e.src = "https://www.google-analytics.com/analytics.js";
-        f.parentNode.insertBefore(e, f);
-      })(window, document, "script", "ga");
-      ga("create", "UA-24336881-1", "auto");
-      ga("send", "pageview");
-    </script>
   </body>
 </html>
