--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <meta
       name="description"
       content="Graduated in Systems for Internet by the institution of Technology Alcides Maya with  graduation in User Experiencie by the institution UniRitter."
@@ -1035,25 +1038,17 @@
                 <div class="row">
                   <ul>
                     <li>
-                      <i class="bi bi-linkedin"></i>
                       <a
                         href="https://www.linkedin.com/in/tatielirb/"
                         target="_blank"
                         ><p>Linkefin</p>
-                        <i class="bi bi-linkedin"></i></a>
-                    </li>
-                    <li>
-                      <a
-                        href="https://www.linkedin.com/in/tatielirb/"
-                        target="_blank"
-                        ><p>Linkefin</p>
-                        <span class="fab fa-linkedin-in"></span
+                        <i class="bi bi-linkedin"></i
                       ></a>
                     </li>
                     <li>
                       <a href="https://twitter.com/tatielirb" target="_blank"
                         ><p>Twitter</p>
-                        <span class="fab fa-twitter"></span
+                        <i class="bi bi-twitter-x"></i
                       ></a>
                     </li>
                     <li>
@@ -1061,19 +1056,19 @@
                         href="https://www.behance.net/tatielirb"
                         target="_blank"
                         ><p>Behance</p>
-                        <span class="fab fa-behance"></span
+                        <i class="bi bi-behance"></i
                       ></a>
                     </li>
                     <li>
                       <a href="https://github.com/tatielirb" target="_blank"
                         ><p>Github</p>
-                        <span class="fab fa-github-alt"></span
+                        <i class="bi bi-github"></i
                       ></a>
                     </li>
                     <li>
                       <a href="https://medium.com/@tatielirb" target="_blank"
                         ><p>Medium</p>
-                        <span class="fab fa-medium-m"></span
+                        <i class="bi bi-medium"></i
                       ></a>
                     </li>
                   </ul>
