feat: change icon generais

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 
           <a href="#portfolio" class="arrow"
             ><p>ir para baixo</p>
-            <span class="fas fa-chevron-down"></span
-          ></a>
+            <i class="bi bi-arrow-down"></i>
+           </a>
         </div>
       </header>
 
@@ -1080,11 +1080,11 @@
       </main>
 
       <footer>
-        <p>© made with lots of <span class="fas fa-coffee"></span></p>
+        <p>© made with lots of <i class="bi bi-cup-hot-fill"></i></p>
         <a href="#" class="to-top"
           ><p>Voltar ao topo</p>
-          <span class="fas fa-arrow-up"></span
-        ></a>
+          <i class="bi bi-arrow-up"></i>
+        </a>
       </footer>
     </div>
 
