feat: change icon generais one

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
           <a href="#portfolio" class="arrow"
             ><p>ir para baixo</p>
-            <i class="bi bi-arrow-down"></i>
+            <i class="bi bi-chevron-down"></i>
            </a>
         </div>
       </header>
