--- a/index.html
+++ b/index.html
@@ -15,19 +15,25 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/style.css" />
+    /> -->
+
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -126,7 +132,7 @@
           <a href="#portfolio" class="arrow"
             ><p>ir para baixo</p>
             <i class="bi bi-chevron-down"></i>
-           </a>
+          </a>
         </div>
       </header>
 
@@ -1080,7 +1086,7 @@
       </main>
 
       <footer>
-        <p>© made with lots of <i class="bi bi-cup-hot-fill"></i></p>
+        <p>© made with lot of <i class="bi bi-cup-hot-fill"></i></p>
         <a href="#" class="to-top"
           ><p>Voltar ao topo</p>
           <i class="bi bi-arrow-up"></i>
@@ -1097,10 +1103,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <script
+    <!-- <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="/js/script.js"></script>
