feat: test of button nav

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <!--
   /**
-    *
     * @copyright 2024 by Tatieli Ramos
-    * 
-    *
     **/
   -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -76,7 +73,7 @@
       <header id="header">
         <div class="bg-filter">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <button
+            <div
               class="button-menu navbar-toggler collapsed"
               type="button"
               data-toggle="collapse"
@@ -90,7 +87,7 @@
                 <span class="bars bars-two"></span>
                 <span class="bars bars-three"></span>
               </span>
-            </button>
+            </div>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
