--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
       rel="stylesheet"
     />
-    <!-- <link
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
-    /> -->
+    />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -73,7 +73,7 @@
       <header id="header">
         <div class="bg-filter">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <div
+            <button
               class="button-menu navbar-toggler collapsed"
               type="button"
               data-toggle="collapse"
@@ -87,7 +87,7 @@
                 <span class="bars bars-two"></span>
                 <span class="bars bars-three"></span>
               </span>
-            </div>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
@@ -1100,10 +1100,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-    <!-- <script
+    <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.0/TweenMax.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="/js/script.js"></script>
