--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
         <div class="bg-filter">
           <nav class="navbar navbar-expand-lg navbar-light">
             <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarToggleExternalContent"
+              aria-controls="navbarToggleExternalContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="hamburguer">
+                <span class="bars bars-one"></span>
+                <span class="bars bars-two"></span>
+                <span class="bars bars-three"></span>
+              </span>
+            </button>
+            <!-- <button
               class="button-menu navbar-toggler collapsed"
               type="button"
               data-toggle="collapse"
@@ -80,8 +95,8 @@
                 <span class="bars bars-two"></span>
                 <span class="bars bars-three"></span>
               </span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            </button> -->
+            <div class="collapse navbar-collapse" id="navbarToggleExternalContent" >
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" href="#" data-link="portfolio"
