--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <header id="header">
         <div class="bg-filter">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <button
+            <!-- <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
@@ -80,13 +80,13 @@
                 <span class="bars bars-two"></span>
                 <span class="bars bars-three"></span>
               </span>
-            </button>
-            <!-- <button
+            </button> -->
+            <button
               class="button-menu navbar-toggler collapsed"
               type="button"
               data-toggle="collapse"
-              data-target="#navbarNav"
-              aria-controls="navbarNav"
+              data-target="#navbarToggleExternalContent"
+              aria-controls="navbarToggleExternalContent"
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
@@ -95,7 +95,7 @@
                 <span class="bars bars-two"></span>
                 <span class="bars bars-three"></span>
               </span>
-            </button> -->
+            </button>
             <div class="collapse navbar-collapse" id="navbarToggleExternalContent" >
               <ul class="navbar-nav">
                 <li class="nav-item">
