feat: teste button open

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             <button
               class="button-menu navbar-toggler collapsed"
               type="button"
-              data-toggle="collapse"
-              data-target="#navbarToggleExternalContent"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarToggleExternalContent"
               aria-controls="navbarToggleExternalContent"
               aria-expanded="false"
               aria-label="Toggle navigation"
